Ticket #3399 - Covers, Fixes.

--- a/modules/boonex/artificer/data/template/system/css/cover.css
+++ b/modules/boonex/artificer/data/template/system/css/cover.css
@@ -4,5 +4,16 @@ import url(../../../../../../../template/css/cover.css);
 
 .bx-cover-wrapper {
     background-image: url(../images/cover.svg);
+    background-color: #eee;
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.bx-cover-wrapper.bx-cover-empty {
     background-color: #dfdbe5;
+    background-repeat: repeat;
+    background-size: auto;
 }
