--- a/plugins_public/tailwind/css/tailwind.css
+++ b/plugins_public/tailwind/css/tailwind.css
@@ -51,6 +51,18 @@
     .bx-artificer .bx-def-margin-bottom {
         @apply mb-4;
     }
+    .bx-artificer .bx-def-margin-leftright {
+        @apply mx-4;
+    }
+    .bx-artificer .bx-def-margin-leftright-neg {
+        @apply -mx-4;
+    }
+    .bx-artificer .bx-def-margin-topbottom {
+        @apply my-4;
+    }
+    .bx-artificer .bx-def-margin-topbottom-neg {
+        @apply -my-4;
+    }
     
     .bx-artificer .bx-def-margin-sec {
         @apply m-2;
@@ -72,6 +84,18 @@
     }
     .bx-artificer .bx-def-margin-sec-bottom {
         @apply mb-2;
+    }
+    .bx-artificer .bx-def-margin-sec-leftright {
+        @apply mx-2;
+    }
+    .bx-artificer .bx-def-margin-sec-leftright-neg {
+        @apply -mx-2;
+    }
+    .bx-artificer .bx-def-margin-sec-topbottom {
+        @apply my-2;
+    }
+    .bx-artificer .bx-def-margin-sec-topbottom-neg {
+        @apply -my-2;
     }
     
     .bx-artificer .bx-def-margin-thd {
@@ -95,6 +119,18 @@
     .bx-artificer .bx-def-margin-thd-bottom {
         @apply mb-1;
     }
+    .bx-artificer .bx-def-margin-thd-leftright {
+        @apply mx-1;
+    }
+    .bx-artificer .bx-def-margin-thd-leftright-neg {
+        @apply -mx-1;
+    }
+    .bx-artificer .bx-def-margin-thd-topbottom {
+        @apply my-1;
+    }
+    .bx-artificer .bx-def-margin-thd-topbottom-neg {
+        @apply -my-1;
+    }
 
     .bx-artificer .bx-def-padding {
         @apply p-4;
@@ -116,6 +152,18 @@
     }
     .bx-artificer .bx-def-padding-bottom {
         @apply pb-4;
+    }
+    .bx-artificer .bx-def-padding-leftright {
+        @apply px-4;
+    }
+    .bx-artificer .bx-def-padding-topbottom {
+        @apply py-4;
+    }
+    .bx-artificer .bx-def-padding-lefttopright {
+        @apply px-4 pt-4;
+    }
+    .bx-artificer .bx-def-padding-rightbottomleft {
+        @apply px-4 pb-4;
     }
     
     .bx-artificer .bx-def-padding-sec {
@@ -139,6 +187,18 @@
     .bx-artificer .bx-def-padding-sec-bottom {
         @apply pb-2;
     }
+    .bx-artificer .bx-def-padding-sec-leftright {
+        @apply px-2;
+    }
+    .bx-artificer .bx-def-padding-sec-topbottom {
+        @apply py-2;
+    }
+    .bx-artificer .bx-def-padding-lefttopright {
+        @apply px-2 pt-2;
+    }
+    .bx-artificer .bx-def-padding-rightbottomleft {
+        @apply px-2 pb-2;
+    }
 
     .bx-artificer .bx-def-padding-thd {
         @apply p-1;
@@ -160,6 +220,18 @@
     }
     .bx-artificer .bx-def-padding-thd-bottom {
         @apply pb-1;
+    }
+    .bx-artificer .bx-def-padding-thd-leftright {
+        @apply px-1;
+    }
+    .bx-artificer .bx-def-padding-thd-topbottom {
+        @apply py-1;
+    }
+    .bx-artificer .bx-def-padding-lefttopright {
+        @apply px-1 pt-1;
+    }
+    .bx-artificer .bx-def-padding-rightbottomleft {
+        @apply px-1 pb-1;
     }
 
     /* Fonts */
@@ -368,6 +440,13 @@
         @apply opacity-100 ring-0 bg-gray-50 dark:bg-gray-700 shadow-none;
     }
 
+    /* Page Cover */
+    .bx-artificer .bx-cover-wrapper.bx-cover-empty,
+    .bx-artificer .bx-base-pofile-cover-image.bx-bpci-holder img.bx-base-pofile-cover-image,
+    .bx-artificer .bx-base-pofile-unit-with-cover.bx-bp-uc-empty .bx-base-pofile-unit-cover {
+        @apply bg-gray-200 dark:bg-gray-900;
+    }
+    
     /* Page Submenu */
     .bx-artificer .bx-menu-main-submenu .bx-menu-item.bx-menu-tab-active a {
         @apply text-gray-900 dark:text-gray-100;
